# Rasa-EC-bot

./: .gitignore  README.md  pyproject.toml  requirement.md
backend/: README.md
backend/app/: auth.py  database.py  main.py  models.py
backend/db/: init_db.sql  seed_data.sql
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue
frontend/src/router/: index.ts
frontend/src/views/: Login.vue  Register.vue
